--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,49 +1,22 @@
 <section class="section">
 	<div class="container">
-		<h1 class="title has-text-centered">商品列表</h1>
-		<% @types.each do |type| %>
-		  <br>	
-		  <div class="column">
-		  <div class="title">
-		  	 <%= type.name%>
-		  </div>		  	
-		  </div>		  	
-		  <hr>
-		  <br>
-		  <br>
-		  <div class="columns">
-		  	<% type.products.each do |product| %>
-		    <div class="column is-3">
-		    	<div class="card">
-		    		<div class="card-image">
-		    			<figure class="image is-square">
-		    				<%= link_to  admin_commodity_path(product) do%>
-		    				<%= image_tag product.pictures %>
-		    				<% end %>
-		    			</figure>
-		    		</div>
-		    		<div class="card-content">
-		    			<div class="columns is-5">
-		    				<div class="column">
-		    					<div class="title">
-		    			          <%= product.name %>
-		    			        </div>
-		    				</div>
-		    			</div>
+		<div class="title is-1"> <%= @product.name %> </div>
+		<div class="column has-text-centered">
+ 			<%= image_tag @product.pictures %>
+        </div>
 
-		    			<div>
-		    			  售價 : $<%= product.price %>
-		    			</div>
-		    			<div>
-		    			  <%=truncate product.description, length: 50, omission:'...'%>
-		    			</div>	    			
-		    		</div>
-		    	</div>
-		    </div>
-		  <% end %>
-		  </div>
-		  
-		<% end %>
-
+        <br>
+        <div class="colum is-size-3 has-text-weight-semibold">
+        	價格:<%= @product.price %> 
+        </div>
+        <div class="has-text-right">
+         <%= link_to '我要購買',order_path,class:'button is-danger is-large'%>               
+        </div>
+        <div class="colum is-size-3 has-text-weight-semibold">
+        	敘述:
+        </div>
+		<div class="column is-size-4">
+			<%=simple_format  @product.description %> 
+		</div>
 	</div>
 </section>
