--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -23,7 +23,7 @@
 		    <div class="column is-3">
 		    	<div class="card">
 		    		<div class="card-image">
-		    			<figure class="image is-square">
+		    			<figure class="image 256X256">
 		    				<%= link_to  admin_commodity_path(product) do%>
 		    				<%= image_tag product.pictures %>
 		    				<% end %>
