--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -12,7 +12,7 @@
         	敘述:
         </div>
 		<div class="column is-size-4">
-			<%= @product.description %> 
+			<%= simple_format  @product.description %> 
 		</div>
 	</div>
 </section>
