--- a/app/views/admin/designers/index.html.erb
+++ b/app/views/admin/designers/index.html.erb
@@ -32,7 +32,7 @@
 		  	 <%= designer.name%>
 		  </div>
 				<div class="card-content">
-	    			  <%= designer.description%>
+	    			  <%=simple_format  designer.description%>
 		    	</div>
 		    </div>  
 	      </div>
