--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <div class="columns">
-  <div class="column  is-4 is-offset-4">
+  <div class="column  is-2 is-offset-5">
     <br>
     <br>
     <br>
-    <h1 class="title has-text-centered">Sign up</h1>
+    <h1 class="title has-text-centered">註冊</h1>
     <div class="box">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   
   <div class="field">
-    <%= f.label :email , class: 'label'%><br />
+    <%= f.label :email ,'信箱:', class: 'label'%><br />
     <%= f.email_field :email, class: 'input', autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password, class: 'label' %>
+    <%= f.label :password,'密碼:', class: 'label' %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -23,20 +23,25 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation , class: 'label'%><br />
+    <%= f.label :password_confirmation ,'密碼確認:', class: 'label'%><br />
     <%= f.password_field :password_confirmation, class: 'input', autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "註冊" %>
   </div>
-  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 <% end %>
-<%= render "users/shared/links" %>
     </div>
 
   </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
 
 
