multiple file false

--- a/app/views/admin/commodities/_form.html.erb
+++ b/app/views/admin/commodities/_form.html.erb
@@ -36,7 +36,7 @@
   <div class="form-group">
   <img id="img_prev" width=300 height=300 src="#" alt="請選擇照片" class="img-thumbnail hidden"/> <br/>
   <span class="btn btn-default btn-file">
-  <%= f.file_field :pictures,multiple: true , id: "avatar-upload" %>
+  <%= f.file_field :pictures, id: "avatar-upload" %>
   </span>
   <%= f.hidden_field :pictures_cache %>   
   </div>
