--- a/app/views/admin/designers/_form.html.erb
+++ b/app/views/admin/designers/_form.html.erb
@@ -11,7 +11,7 @@
       <% @designer.errors.full_messages_for(:description).each do |msg| %>
         <p class="help is-danger"><%= msg %></p>
       <% end %>
-    <%= f.text_area :description, class: 'input'%>
+    <%= f.text_area :description, class: 'textarea'%>
   </div>
   <div class="field">
   <%= f.label :image,'設計師照片' ,class:'label'%>
