管理員與使用者區分以及管理員對於客戶訂單的察看

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
  */
  @import "font-awesome-sprockets";
  @import "font-awesome";
+ @import "bulma/sass/utilities/initial-variables";
 
 
 $light: #F6A634;
+$dimensions: 200;
