--- a/app/views/admin/commodities/edit.html.erb
+++ b/app/views/admin/commodities/edit.html.erb
@@ -1,16 +1,22 @@
+<section class="section">
+	<div class="contaoner">
 <div class="columns">
   <div class="column  is-4 is-offset-4">
     <br>
-    <br>
-    <br>
     <h1 class="title has-text-centered">商品管理</h1>
+    <br>
+    <br>
+    <br>
     <div class="box">
 <%= form_for @product,url:admin_commodity_path do |f| %>
   <%= render 'form',f:f %>
 <% end %>
     </div>
   </div>
-</div>
+</div>		
+	</div>
+</section>
+
 
 
 
