--- a/app/views/admin/commodities/makenewtype.html.erb
+++ b/app/views/admin/commodities/makenewtype.html.erb
@@ -1,15 +1,18 @@
+<section class="section">
+  <div class="container">
 <div class="columns">
-  <div class="column  is-4 is-offset-4">
-    <br>
-    <br>   
+  <div class="column  is-4 is-offset-4">  
     <br>
     <h1 class="title has-text-centered">新增類別</h1>
+    <br>
+    <br>
+    <br>
     <div class="box">
     <%= form_for @type,url: admin_newtype_path do |f| %>
       <div class="field">
         <%= f.label :name,'商品類別', class: 'label' %>
         <%= f.text_field :name, class: 'input' %>
-      </div>	
+      </div>  
         <%= f.submit "確認",class:"button is-primary" %>
         <%= link_to '跳過' ,new_admin_commodity_path ,class:'button is-info'%>
       <% end %>
@@ -17,6 +20,9 @@
   </div>
 </div>
 
+
+  </div>
+</section>
 
 
 
