--- a/app/views/admin/designers/edit.html.erb
+++ b/app/views/admin/designers/edit.html.erb
@@ -1,16 +1,22 @@
+<sevtion class="section">
+	<div class="container">
 <div class="columns">
   <div class="column  is-4 is-offset-4">
     <br>
-    <br>
-    <br>
     <h1 class="title has-text-centered">編輯設計師</h1>
+    <br>
+    <br>
+    <br>
     <div class="box">
 <%= form_for @designer,url:admin_designer_path do |f| %>
   <%= render 'form',f:f %>
 <% end %>
     </div>
   </div>
-</div>
+</div>		
+	</div>
+</sevtion>
+
 
 
 
