--- a/app/views/admin/designers/index.html.erb
+++ b/app/views/admin/designers/index.html.erb
@@ -1,8 +1,11 @@
 <section class="section">
 	<div class="container">
+	<br>
 		<h1 class="title has-text-centered">設計師列表</h1>
 		<% @designers.each do |designer| %>
-		  <br>	
+    <br>
+    <br>
+    <br>	
 		  <div class="columns">
 		  <div class="column">
 		  	
@@ -19,13 +22,9 @@
 		  <br>
 		  <div class="columns">
 		    <div class="column is-3">
-		    	<div class="card">
-		    		<div class="card-image">
-		    			<figure class="image is-square">
-		    				<%= image_tag designer.image %>
+		    			<figure class="image is-square" >
+		    				<%= image_tag designer.image ,style:'border-radius: 50%'%>
 		    			</figure>
-		    		</div>
-		        </div>	
 		    </div>	    		  			
 	    	<div class="column ">
 	    				  <div class="title">
