--- a/app/views/admin/details/show.html.erb
+++ b/app/views/admin/details/show.html.erb
@@ -1,11 +1,10 @@
 <section class="section">
-	<div class="container">
-		<p class="title has-text-success "><%= flash[:note] %></p>		
-
-		<h1 class="title has-text-centered">訂單紀錄</h1>
-		  <br>
-		  <br>
-		  <br>
+	<div class="container">	
+		<br>
+		<h1 class="title has-text-centered"><%= @user.email %>的訂單紀錄</h1>
+		<br>
+		<br>
+		<br>
 		<% @orders.each do |order| %>
 		<div class="box">
 		<div class="columns">
