--- a/app/views/products/designers.html.erb
+++ b/app/views/products/designers.html.erb
@@ -1,5 +1,6 @@
 <section class="section">
 	<div class="container">
+		<br>	
 		<h1 class="title has-text-centered">設計師列表</h1>
 		<% @designers.each do |designer| %>
 		  <br>	
@@ -7,14 +8,10 @@
 		  <br>
 		  <br>
 		  <div class="columns">
-		    <div class="column is-3">
-		    	<div class="card">
-		    		<div class="card-image">
-		    			<figure class="image is-square">
-		    				<%= image_tag designer.image %>
-		    			</figure>
-		    		</div>
-		        </div>	
+		    <div class="column is-2">
+		    	<figure class="image is-200x200" >
+		    		<%= image_tag designer.image ,style:'border-radius: 50%'%>
+		    	</figure>
 		    </div>	    		  			
 	    	<div class="column ">
 	    				  <div class="title">
