--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -20,8 +20,13 @@
           <% end %>
           <div class="navbar-end">
           <% if current_user %>
+             <% if current_user.admin? %>
+             <div class="tag is-warning ">顧客視角</div>
+             <%= link_to '切換視角',admin_commodities_path,class:"navbar-item has-text-danger has-text-weight-bold" %> 
+             <% end %>
              <%= link_to '登出',destroy_user_session_path, method: :delete ,class:"navbar-item" %> 
              <%= link_to '訂單紀錄',detail_path,class:"navbar-item" %>
+
           <% else %>
             <%= link_to '登入',new_user_session_path ,class:"navbar-item" %>            
           <% end %>  
