--- a/app/views/products/detail.html.erb
+++ b/app/views/products/detail.html.erb
@@ -22,7 +22,7 @@
 				
 					<div class="column">		               
 					   <div class="title">
-					   	<%= link_to product_path(ordered_item) do %>
+					   	<%= link_to product_path(ordered_item.product) do %>
 					   <%= ordered_item.product.name %>
 		   				<% end %>
 					   </div>
