--- a/app/views/admin/details/index.html.erb
+++ b/app/views/admin/details/index.html.erb
@@ -15,7 +15,7 @@
 					</div>
 					<div class="column">
 						客戶帳號：
-						<div class="title  is-size-4">
+						<div class="title  is-size-4  is-size-6-mobile">
 							<%= link_to admin_detail_path(user) do%>
 							<%= user.email %>
 							<% end %>
