--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -9,7 +9,7 @@
     <% else %>
         <div class="<%= flash_class(key) %>">                                  
             <% if value %>
-                 帳號或密碼錯誤
+            <%= value %>
             <% end %>
         </div>
     <% end %>
