--- a/app/views/products/detail.html.erb
+++ b/app/views/products/detail.html.erb
@@ -7,6 +7,11 @@
 		  <br>
 		  <br>
 		<% @orders.each do |order| %>
+		<% if order.cancel %>
+		<div class="button is-danger">
+			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 取消
+		</div>			
+		<% end %>		
 		<div class="box">
 		<div class="columns">
 			<div class="column">
@@ -44,13 +49,17 @@
 		</div>
 		<hr>
 		<div class="columns">
-		<% if !order.option.empty? %>
 			<div class="column">
 				備註:
 				<br>
 				<%= simple_format order.option%>
 			</div>
-		<% end %>
+			<div class="column">
+				寄件地址:
+				<div class="has-text-weight-bold">				
+				<%= simple_format order.address%>
+			    </div>
+			</div>
 		    <div class="column has-text-right">
 				下單日期:
 				<div class="has-text-weight-bold">
