客人無法看到以及購買下架商品

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,10 +7,12 @@
 		  <br>	
 		  <div class="column">
 		  <div class="title">
-		  	 <%= type.name%>
+		  	<% if type.products.find_by(shelve:true) %>
+				<%= type.name%>	  		
 		  </div>		  	
 		  </div>		  	
 		  <hr>
+		<% end %>		  
 		  <br>
 		  <br>
 		  <div class="columns">
