--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,8 +18,13 @@
                     價格:<%= @product.price %> 
                 </div>
                 <div class="column ">
-                 <%= link_to '我要購買',order_path,class:'button is-danger'%>               
+                <% if !@product.shelve %>
+                 <%= link_to '商品已下架',class:'button is-danger is-outlined'%>    
+                <% else %>
+                 <%= link_to '我要購買',order_path,class:'button is-danger'%>  
+                <% end %>             
                 </div>
+
                 <div class="column is-size-3 has-text-weight-semibold">
                     敘述:
                 </div>
