--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
                 </div>
                 <div class="column ">
                 <% if !@product.shelve %>
-                 <%= link_to '商品已下架',class:'button is-danger is-outlined'%>    
+                <p class="title is-dnager">商品已下架</p>   
                 <% else %>
                  <%= link_to '我要購買',order_path,class:'button is-danger'%>  
                 <% end %>             
