下架商品文字處理

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
                 </div>
                 <div class="column ">
                 <% if !@product.shelve %>
-                <p class="title is-dnager">商品已下架</p>   
+                <p class="title is-color-dnager">商品已下架</p>   
                 <% else %>
                  <%= link_to '我要購買',order_path,class:'button is-danger'%>  
                 <% end %>             
