管理員編輯商品UI設計

--- a/app/views/admin/commodities/_form.html.erb
+++ b/app/views/admin/commodities/_form.html.erb
@@ -41,9 +41,15 @@
   <%= f.hidden_field :pictures_cache %>   
   </div>
 </div>
-  <%= f.submit "確認" ,class:"button is-light"%>
+<div class="columns">
+  <div class="column">
+      <%= f.submit "確認" ,class:"button is-light"%>
   <% if params[:action] == 'edit' %>
-  <%= link_to '刪除',admin_commodity_path(@product),method: :delete,data: {confirm:'要刪除嘛？'},class:'button is-danger'%>
   <%= link_to '下架',admin_path(@product),method: :post,data: {confirm:'要下架嘛？'},class:'button is-warning'%>
+  </div>
+   <div class="column has-text-right">
+  <%= link_to '刪除',admin_commodity_path(@product),method: :delete,data: {confirm:'要刪除嘛？'},class:'button is-danger'%>    
+  </div>
   <% end %>  
+</div>
  
