管理員編輯設計師UI設計

--- a/app/views/admin/designers/index.html.erb
+++ b/app/views/admin/designers/index.html.erb
@@ -22,7 +22,7 @@
 		  <br>
 		  <div class="columns">
 		    <div class="column is-3">
-		    			<figure class="image is-square" >
+		    			<figure class="image is-200x200" >
 		    				<%= image_tag designer.image ,style:'border-radius: 50%'%>
 		    			</figure>
 		    </div>	    		  			
