--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -12,15 +12,15 @@
           </div>         
         </div>
 
-        <div class="column">
-              <div class="title is-1"> <%= @product.name %> </div>  
-                <div class="column has-text-right">
+        <div class="column ">
+              <div class="title is-2"> <%= @product.name %> </div>  
+                <div class="column ">
                 <% if !@product.shelve %>
-                        <p class="button is-danger is-outlined">已下架</p>
+                        <p class="button is-danger ">已下架</p>
                 <% end %>
                 </div>                           
                 <div class="column is-size-3 has-text-weight-semibold">
-                    價格:<%= @product.price %> 
+                    價格:NT$<%= @product.price %> 
                 </div>
                 <div class="column ">
                 <%= link_to  edit_admin_commodity_path(@product) do%>
@@ -29,12 +29,13 @@
                 </div>  
                 <% end %>            
                 </div>
-                <div class="column is-size-3 has-text-weight-semibold">
+                <div class="column is-size-4 has-text-weight-semibold">
                     敘述:
-                </div>
-                <div class="column is-size-4">
+                <div class=" is-size-5 has-text-weight-normal">
                     <%=simple_format  @product.description %> 
-                </div>     
+                </div>                    
+                </div>
+     
                 <div class="column has-text-right">
                  <%= link_to '上一頁',:back,class:'button is-info  '%>               
                 </div>            
