--- a/app/views/products/detail.html.erb
+++ b/app/views/products/detail.html.erb
@@ -6,7 +6,7 @@
 		  <br>
 		  <br>
 		  <br>
-		<% @orders.each do |order| %>
+		<% @orders.order(id: :desc).each do |order| %>
 		<% if order.cancel %>
 		<div class="button is-danger">
 			此訂單已經在 <%= order.updated_at.strftime('%m/%d , %H:%M') %> 取消
