--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">
         <div class="columns">
-        <div class="column is-5 has-text-centered" >
+        <div class="column is-5 has-text-centered" >                 
           <div class="card-image">
             <figure class="image is-512x512 is-hidden-mobile">
                 <%= image_tag @product.pictures %>
@@ -12,30 +12,33 @@
           </div>         
         </div>
 
-        <div class="column">
-              <div class="title is-1"> <%= @product.name %> </div>                
-                <div class="column is-size-3 has-text-weight-semibold">
-                    價格:<%= @product.price %> 
-                </div>
-                <div class="column ">
+        <div class="column"> 
+             <div class="column">
+              <div class="title is-2"> <%= @product.name %> </div>                 
+            </div>             
+                <div class="column has-text-right">
                 <% if !@product.shelve %>
                 <p class="button is-danger is-outlined">已下架</p>  
                 <% else %>
                  <%= link_to '我要購買',order_path,class:'button is-danger'%>  
                 <% end %>             
+                </div>                      
+                <div class="column is-size-4 ">
+                    價格:
+                    <div class=" is-size-3 has-text-weight-semibold">
+                     NT$<%= @product.price %> 
+                    </div>
                 </div>
-
-                <div class="column is-size-3 has-text-weight-semibold">
+                <div class="column is-size-4 ">
                     敘述:
-                </div>
-                <div class="column is-size-4">
+                <div class="is-size-5 has-text-weight-semibold">
                     <%=simple_format  @product.description %> 
-                </div>     
+                </div>   
+                </div>                  
                 <div class="column has-text-right">
                  <%= link_to '上一頁',:back,class:'button is-info  '%>               
-                </div>            
-        </div>
-           
+                </div>                    
+        </div>    
         </div>
 
 	</div>
